--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -124,7 +124,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="AnimationFrame.cpp" />
     <ClCompile Include="Animations.cpp" />
+    <ClCompile Include="AnimationSet.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="define.cpp" />
     <ClCompile Include="Koopas.cpp" />
@@ -141,7 +144,10 @@
     <ClCompile Include="Textures.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
+    <ClInclude Include="AnimationFrame.h" />
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="AnimationSet.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Koopas.h" />
