load map 1 and 2 is ok with camera follow mario

--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Brick.h">
@@ -132,6 +135,9 @@
       <Filter>Framework</Filter>
     </ClInclude>
     <ClInclude Include="Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
