--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -129,8 +129,7 @@
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="AnimationSet.cpp" />
     <ClCompile Include="Brick.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="define.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Portal.cpp" />
@@ -151,7 +150,7 @@
     <ClInclude Include="Animations.h" />
     <ClInclude Include="AnimationSet.h" />
     <ClInclude Include="Brick.h" />
-    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="Map.h" />
