--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -129,10 +129,14 @@
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="AnimationSet.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="FireFlower.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MarioTail.cpp" />
+    <ClCompile Include="PiranhaFlower.cpp" />
+    <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -151,11 +155,15 @@
     <ClInclude Include="Animations.h" />
     <ClInclude Include="AnimationSet.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="FireFlower.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioTail.h" />
+    <ClInclude Include="PiranhaFlower.h" />
+    <ClInclude Include="Plant.h" />
     <ClInclude Include="Portal.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Utils.h" />
