--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -83,6 +83,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <LanguageStandard>stdcpp14</LanguageStandard>
+      <DisableSpecificWarnings>4005;4996;4244;4018;4305;4101;4715;4067;26495;</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <AdditionalDependencies>d3dx9.lib;d3d9.lib;dxguid.lib;dxerr.lib;dinput8.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -93,6 +94,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <DisableSpecificWarnings>4005;4996;4244;4018;4305;4101;4715;4067;26495;4005;4996;4244;4018;4305;4101;4715;4067;26495;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,15 +131,23 @@
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="AnimationSet.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FireFlower.cpp" />
+    <ClCompile Include="FireFlowerBall.cpp" />
     <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Koopas.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MarioTail.cpp" />
+    <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="PiranhaFlower.cpp" />
     <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Portal.cpp" />
+    <ClCompile Include="Pswitch.cpp" />
+    <ClCompile Include="SuperLeaf.cpp" />
+    <ClCompile Include="SuperMushroom.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -155,16 +165,24 @@
     <ClInclude Include="Animations.h" />
     <ClInclude Include="AnimationSet.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="FireFlower.h" />
+    <ClInclude Include="FireFlowerBall.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="define.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Koopas.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioTail.h" />
+    <ClInclude Include="Pipe.h" />
     <ClInclude Include="PiranhaFlower.h" />
     <ClInclude Include="Plant.h" />
     <ClInclude Include="Portal.h" />
+    <ClInclude Include="Pswitch.h" />
+    <ClInclude Include="SuperLeaf.h" />
+    <ClInclude Include="SuperMushroom.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Game.h" />
