fix some collision and load scene

--- a/05-ScenceManager/05-ScenceManager.vcxproj
+++ b/05-ScenceManager/05-ScenceManager.vcxproj
@@ -139,13 +139,18 @@
     <ClCompile Include="FireBallEffect.cpp" />
     <ClCompile Include="FireFlower.cpp" />
     <ClCompile Include="FireFlowerBall.cpp" />
+    <ClCompile Include="GreeenLand.cpp" />
+    <ClCompile Include="GreenLandObject.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Hud.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Koopas.cpp" />
+    <ClCompile Include="LastItem.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="MarioTail.cpp" />
+    <ClCompile Include="Ninja.cpp" />
+    <ClCompile Include="NinjaBoomerang.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="PiranhaFlower.cpp" />
     <ClCompile Include="Plant.cpp" />
@@ -181,14 +186,19 @@
     <ClInclude Include="FireBallEffect.h" />
     <ClInclude Include="FireFlower.h" />
     <ClInclude Include="FireFlowerBall.h" />
+    <ClInclude Include="GreeenLand.h" />
+    <ClInclude Include="GreenLandObject.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="Hud.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Koopas.h" />
+    <ClInclude Include="LastItem.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="MarioTail.h" />
+    <ClInclude Include="Ninja.h" />
+    <ClInclude Include="NinjaBoomerang.h" />
     <ClInclude Include="Pipe.h" />
     <ClInclude Include="PiranhaFlower.h" />
     <ClInclude Include="Plant.h" />
