--- a/05-ScenceManager/05-ScenceManager.vcxproj.filters
+++ b/05-ScenceManager/05-ScenceManager.vcxproj.filters
@@ -174,7 +174,7 @@
       <Filter>Items</Filter>
     </ClCompile>
     <ClCompile Include="BrickBrokenEffect.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Effects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -320,7 +320,7 @@
       <Filter>Items</Filter>
     </ClInclude>
     <ClInclude Include="BrickBrokenEffect.h">
-      <Filter>Header Files</Filter>
+      <Filter>Effects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
